# cmake_test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ex.f90  example.txt  k].txt  leber.txt  lp.txt  m  m.txt  main.f90  project.py  readme.md  ss  t.py  t.tex  t.txt  test.py  unitteest.py  xt.txt
cmake/: compiler.cmake
fort_modules/: CMakeLists.txt  module1.f90  module2.f90
install/scripts/: testi.py
k/: project.aux  project.out  project.tex  project.toc
k.pu/: k.py
plugin/: CMakeLists.txt
src/: CMakeLists.txt  add_numbers.py  examples.mod  ma.f90  ma.mod  main.f90  module_use.f90  test.py  testi.py
src/man/: manly.py
src/nop/src/: main.py
src/test/: Neural-Network-From-Scratch.ipynb  Neural-Network-From-Scratch.py  README.md
tools/: CMakeLists.txt  tools.py
tools/temps/: CMakeLists.txt  fents.py  kemps.py  temps.py
